changed colors of title and fixed page size issue where there was a gap between the content and the right edge of the display

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
 }
 main {
-    padding: 10px, 2.5rem;    /* Footer height */
+    padding: 10px 2.5rem;    /* Footer height */
 }
 header {
     background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210923/pngtree-news-red-and-blue-stripe-tv-background-image_902549.png);
@@ -24,15 +24,19 @@ header {
     
 }
 
+body, main, header {
+    width: 100%;
+}
+
 h1 {
     font-size: 6rem;
     margin: 0;
-    font-family: fantasy, monospace;
-    color: #b63d3d;
+    font-family: Impact, fantasy, monospace;
+    color: #e9dfdf;
     font-style: italic;
     font-variant: small-caps;
     text-decoration: underline;
-    text-decoration-color: rgb(54, 51, 51);
+    text-decoration-color: #b63d3dc8;
 }
 
 main {
@@ -62,7 +66,7 @@ button {
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+button:hover:not(.modal-close-button) {
     background-color: #234658;
     color: white;
 }
@@ -108,8 +112,7 @@ label {
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: .75rem;
+    width: 100%;
     display: grid;
     grid-template-rows: auto auto 1fr 1fr;
     grid-template-columns: 1fr 2fr;
@@ -205,6 +208,10 @@ label {
 .read-more:hover {
     background-color: #931d1d;
 }
+
+#search-button {
+    background-color: #b63d3dc8;
+}
 /**** Modal ****/
 .modal {
     position: fixed;
@@ -249,7 +256,7 @@ label {
 
 .modal-close-button:hover {
     color: #555;
-    background-color: white;
+   /*  background-color: rgba(255, 255, 255, 0); */
 }
 
 .modal-overlay {
